assert-struct/tests/snapshots/basic__age_mismatch.snap
---
source: assert-struct/tests/basic.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/basic_errors/age_mismatch.rs:20:18
   |
20 |             age: 25,
   |                  ^^ got 30
